src/main/java/ut/pp/parser/antlr4/PotatoParser.java
// Generated from /home/extratoast/IdeaProjects/PP-Project3/src/antlr4/ut/pp/grammar/Potato.g4 by ANTLR 4.10.1
package ut.pp.parser.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PotatoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, SHARED=24, 
		IF=25, ELSE=26, WHILE=27, PRINT=28, PRINT_NL=29, INPUT=30, FORK=31, JOIN=32, 
		NEW=33, LOCK=34, SYNC=35, LENGTH=36, DEC_INT_LITERAL=37, BIN_INT_LITERAL=38, 
		HEX_INT_LITERAL=39, BOOL_LITERAL=40, CHAR_LITERAL=41, STRING_LITERAL=42, 
		TYPE_INT=43, TYPE_BOOL=44, TYPE_CHAR=45, TYPE_STRING=46, IDENTIFIER=47, 
		COMMENT=48, WHITESPACE=49;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_declaration = 2, RULE_synchronizedBlock = 3, 
		RULE_assignment = 4, RULE_if = 5, RULE_while = 6, RULE_scope = 7, RULE_fork = 8, 
		RULE_parallelScope = 9, RULE_print = 10, RULE_expression = 11, RULE_expression_l1 = 12, 
		RULE_expression_l2 = 13, RULE_expression_l3 = 14, RULE_expression_l4 = 15, 
		RULE_expression_l5 = 16, RULE_input = 17, RULE_type = 18, RULE_variable = 19, 
		RULE_literal = 20, RULE_array_literal = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "declaration", "synchronizedBlock", "assignment", 
			"if", "while", "scope", "fork", "parallelScope", "print", "expression", 
			"expression_l1", "expression_l2", "expression_l3", "expression_l4", "expression_l5", 
			"input", "type", "variable", "literal", "array_literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'[]'", "'='", "'['", "']'", "'('", "')'", "'{'", "'}'", 
			"'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", 
			"'-'", "'*'", "'++'", "'!'", "','", "'shared'", "'if'", "'else'", "'while'", 
			"'print'", "'printNL'", "'userInput'", "'fork'", "'join'", "'new'", "'lock'", 
			"'sync'", "'length'", null, null, null, null, null, null, "'int'", "'bool'", 
			"'char'", "'string'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"SHARED", "IF", "ELSE", "WHILE", "PRINT", "PRINT_NL", "INPUT", "FORK", 
			"JOIN", "NEW", "LOCK", "SYNC", "LENGTH", "DEC_INT_LITERAL", "BIN_INT_LITERAL", 
			"HEX_INT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", 
			"TYPE_INT", "TYPE_BOOL", "TYPE_CHAR", "TYPE_STRING", "IDENTIFIER", "COMMENT", 
			"WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Potato.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PotatoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PotatoParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << SHARED) | (1L << IF) | (1L << WHILE) | (1L << PRINT) | (1L << PRINT_NL) | (1L << FORK) | (1L << LOCK) | (1L << SYNC) | (1L << TYPE_INT) | (1L << TYPE_BOOL) | (1L << TYPE_CHAR) | (1L << TYPE_STRING) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(44);
				statement();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public ForkContext fork() {
			return getRuleContext(ForkContext.class,0);
		}
		public SynchronizedBlockContext synchronizedBlock() {
			return getRuleContext(SynchronizedBlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SHARED:
			case LOCK:
			case TYPE_INT:
			case TYPE_BOOL:
			case TYPE_CHAR:
			case TYPE_STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				declaration();
				setState(53);
				match(T__0);
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				assignment();
				setState(56);
				match(T__0);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				if_();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				while_();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				scope();
				}
				break;
			case PRINT:
			case PRINT_NL:
				enterOuterAlt(_localctx, 6);
				{
				setState(61);
				print();
				setState(62);
				match(T__0);
				}
				break;
			case FORK:
				enterOuterAlt(_localctx, 7);
				{
				setState(64);
				fork();
				setState(65);
				match(T__0);
				}
				break;
			case SYNC:
				enterOuterAlt(_localctx, 8);
				{
				setState(67);
				synchronizedBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StringDeclarationContext extends DeclarationContext {
		public TerminalNode TYPE_STRING() { return getToken(PotatoParser.TYPE_STRING, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PotatoParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SHARED() { return getToken(PotatoParser.SHARED, 0); }
		public StringDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterStringDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitStringDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitStringDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LockDeclarationContext extends DeclarationContext {
		public TerminalNode LOCK() { return getToken(PotatoParser.LOCK, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PotatoParser.IDENTIFIER, 0); }
		public LockDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterLockDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitLockDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitLockDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrimitiveDeclarationContext extends DeclarationContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(PotatoParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SHARED() { return getToken(PotatoParser.SHARED, 0); }
		public PrimitiveDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterPrimitiveDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitPrimitiveDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitPrimitiveDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrayDeclarationContext extends DeclarationContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(PotatoParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Array_literalContext array_literal() {
			return getRuleContext(Array_literalContext.class,0);
		}
		public TerminalNode SHARED() { return getToken(PotatoParser.SHARED, 0); }
		public ArrayDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterArrayDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitArrayDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitArrayDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new ArrayDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SHARED) {
					{
					setState(70);
					match(SHARED);
					}
				}

				setState(73);
				type();
				setState(74);
				match(T__1);
				setState(75);
				match(IDENTIFIER);
				setState(76);
				match(T__2);
				setState(79);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__5:
				case T__18:
				case T__21:
				case INPUT:
				case LENGTH:
				case DEC_INT_LITERAL:
				case BIN_INT_LITERAL:
				case HEX_INT_LITERAL:
				case BOOL_LITERAL:
				case CHAR_LITERAL:
				case STRING_LITERAL:
				case IDENTIFIER:
					{
					setState(77);
					expression(0);
					}
					break;
				case T__3:
				case NEW:
					{
					setState(78);
					array_literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				_localctx = new PrimitiveDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SHARED) {
					{
					setState(81);
					match(SHARED);
					}
				}

				setState(84);
				type();
				setState(85);
				match(IDENTIFIER);
				setState(86);
				match(T__2);
				setState(87);
				expression(0);
				}
				break;
			case 3:
				_localctx = new StringDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SHARED) {
					{
					setState(89);
					match(SHARED);
					}
				}

				setState(92);
				match(TYPE_STRING);
				setState(93);
				match(IDENTIFIER);
				setState(94);
				match(T__2);
				setState(95);
				expression(0);
				}
				break;
			case 4:
				_localctx = new LockDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				match(LOCK);
				setState(97);
				match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SynchronizedBlockContext extends ParserRuleContext {
		public TerminalNode SYNC() { return getToken(PotatoParser.SYNC, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PotatoParser.IDENTIFIER, 0); }
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public SynchronizedBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_synchronizedBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterSynchronizedBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitSynchronizedBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitSynchronizedBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SynchronizedBlockContext synchronizedBlock() throws RecognitionException {
		SynchronizedBlockContext _localctx = new SynchronizedBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_synchronizedBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(SYNC);
			setState(101);
			match(IDENTIFIER);
			setState(102);
			scope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignArrayElementContext extends AssignmentContext {
		public ExpressionContext index;
		public ExpressionContext expr;
		public TerminalNode IDENTIFIER() { return getToken(PotatoParser.IDENTIFIER, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public AssignArrayElementContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterAssignArrayElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitAssignArrayElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitAssignArrayElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignVariableContext extends AssignmentContext {
		public TerminalNode IDENTIFIER() { return getToken(PotatoParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Array_literalContext array_literal() {
			return getRuleContext(Array_literalContext.class,0);
		}
		public AssignVariableContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterAssignVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitAssignVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitAssignVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new AssignVariableContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				match(IDENTIFIER);
				setState(105);
				match(T__2);
				setState(108);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__5:
				case T__18:
				case T__21:
				case INPUT:
				case LENGTH:
				case DEC_INT_LITERAL:
				case BIN_INT_LITERAL:
				case HEX_INT_LITERAL:
				case BOOL_LITERAL:
				case CHAR_LITERAL:
				case STRING_LITERAL:
				case IDENTIFIER:
					{
					setState(106);
					expression(0);
					}
					break;
				case T__3:
				case NEW:
					{
					setState(107);
					array_literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				_localctx = new AssignArrayElementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				match(IDENTIFIER);
				setState(111);
				match(T__3);
				setState(112);
				((AssignArrayElementContext)_localctx).index = expression(0);
				setState(113);
				match(T__4);
				setState(114);
				match(T__2);
				setState(115);
				((AssignArrayElementContext)_localctx).expr = expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfContext extends ParserRuleContext {
		public ScopeContext trueScope;
		public ScopeContext elseScope;
		public TerminalNode IF() { return getToken(PotatoParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<ScopeContext> scope() {
			return getRuleContexts(ScopeContext.class);
		}
		public ScopeContext scope(int i) {
			return getRuleContext(ScopeContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(PotatoParser.ELSE, 0); }
		public IfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfContext if_() throws RecognitionException {
		IfContext _localctx = new IfContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_if);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(IF);
			setState(120);
			match(T__5);
			setState(121);
			expression(0);
			setState(122);
			match(T__6);
			setState(123);
			((IfContext)_localctx).trueScope = scope();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(124);
				match(ELSE);
				setState(125);
				((IfContext)_localctx).elseScope = scope();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(PotatoParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public WhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileContext while_() throws RecognitionException {
		WhileContext _localctx = new WhileContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(WHILE);
			setState(129);
			match(T__5);
			setState(130);
			expression(0);
			setState(131);
			match(T__6);
			setState(132);
			scope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopeContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).enterScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PotatoListener ) ((PotatoListener)listener).exitScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PotatoVisitor ) return ((PotatoVisitor<? extends T>)visitor).visitScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_scope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__7);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << SHARED) | (1L << IF) | (1L << WHILE) | (1L << PRINT) | (1L << PRINT_NL) | (1L << FORK) | (1L << LOCK) | (1L << SYNC) | (1L << TYPE_INT) | (1L << TYPE_BOOL) | (1L << TYPE_CHAR) | (1L << TYPE_STRING) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(135);
				statement();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
